--- a/module_order/src/main/res/layout/activity_more_operation.xml
+++ b/module_order/src/main/res/layout/activity_more_operation.xml
@@ -67,32 +67,33 @@
                         android:src="@mipmap/fence" />
 
                 <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:orientation="vertical">
 
                     <ImageView
-                            android:id="@+id/close_or_open_living_room_bulb_iv"
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/operate_bedroom_bulb_selector" />
+                        android:id="@+id/close_or_open_kitchen_bulb_iv"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/operate_bedroom_bulb_selector" />
 
                     <TextView
-                            android:id="@+id/living_room_light_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingTop="3dip"
-                            android:text="开启客厅灯"
-                            android:textColor="#999999"
-                            android:textSize="@dimen/public_15_0dp"
+                        android:id="@+id/kitchen_light_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:paddingTop="3dip"
+                        android:text="开启厨房灯"
+                        android:textColor="#999999"
+                        android:textSize="@dimen/public_15_0dp"
 
-                            />
+                        />
                 </LinearLayout>
+
             </LinearLayout>
 
 
@@ -137,31 +138,33 @@
                         android:src="@mipmap/fence" />
 
                 <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:orientation="vertical">
 
                     <ImageView
-                            android:id="@+id/close_or_open_television"
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/operate_television_selector" />
+                        android:id="@+id/close_or_open_toilet_bulb_iv"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/operate_bedroom_bulb_selector" />
 
                     <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingTop="3dip"
-                            android:text="电视机"
-                            android:textColor="#999999"
-                            android:textSize="@dimen/public_15_0dp"
+                        android:id="@+id/toilet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:paddingTop="3dip"
+                        android:text="开启厕所灯"
+                        android:textColor="#999999"
+                        android:textSize="@dimen/public_15_0dp"
 
-                            />
+                        />
                 </LinearLayout>
+
             </LinearLayout>
 
             <!--第三行-->
@@ -176,31 +179,30 @@
                     android:orientation="horizontal">
 
                 <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:orientation="vertical">
 
                     <ImageView
-                            android:id="@+id/close_or_open_fanner"
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/operate_water_humidifier_selector" />
+                        android:id="@+id/close_or_open_television"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/operate_television_selector" />
 
                     <TextView
-                            android:id="@+id/fanner_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingTop="3dip"
-                            android:text="开启风扇"
-                            android:textColor="#999999"
-                            android:textSize="@dimen/public_15_0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:paddingTop="3dip"
+                        android:text="电视机"
+                        android:textColor="#999999"
+                        android:textSize="@dimen/public_15_0dp"
 
-                            />
+                        />
                 </LinearLayout>
 
                 <ImageView
